[package]
name = "CrabiPie"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
rfd = "0.15.4"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
opener = "0.8.3"
base64 = "0.22.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
